--- a/assets/theme_styles.scss
+++ b/assets/theme_styles.scss
@@ -5,21 +5,27 @@
 .d-flex {
   display: flex;
 }
+
 .align-items-center {
   align-items: center;
 }
+
 .align-items-start {
   align-items: start;
 }
+
 .flex-wrap {
   flex-wrap: wrap;
 }
+
 .justify-content-center {
   justify-content: center;
 }
+
 .justify-content-end {
   justify-content: flex-end;
 }
+
 .justify-content-between {
   justify-content: space-between;
 }
@@ -27,13 +33,16 @@
 .flex-column {
   flex-direction: column;
 }
+
 // align classes
 .text-end {
   text-align: end;
 }
+
 .text-center {
   text-align: center;
 }
+
 .text-start {
   text-align: start;
 }
@@ -45,52 +54,68 @@
 .w-100 {
   width: 100%;
 }
+
 .max-width-880 {
   max-width: 880px;
 }
+
 .img-fluid {
   width: 100%;
   height: auto;
 }
+
 .mx-auto {
   margin: 0 auto;
 }
+
 .ms-auto {
   margin-left: auto;
 }
+
 .mb-0 {
   margin-bottom: 0;
 }
+
 .mb-1 {
   margin-bottom: 8px !important;
 }
+
 .mb-2 {
   margin-bottom: 16px !important;
 }
+
 .mb-3 {
   margin-bottom: 24px !important;
 }
+
 .mb-4 {
   margin-bottom: 32px !important;
 }
+
 .mb-5 {
   margin-bottom: 40px !important;
 }
+
 .mt-0 {
   margin-top: 0;
 }
+
 .pb-0 {
   padding-bottom: 0;
 }
+
 .gap-1 {
   gap: 10px;
 }
+
 .gap-2 {
   gap: 16px;
 }
+
 .gap-3 {
   gap: 24px;
 }
+
 .gap-4 {
   gap: 32px;
 }
@@ -98,21 +123,27 @@
 .fs-14 {
   font-size: 14px;
 }
+
 .fs-18 {
   font-size: 18px;
 }
+
 .fs-20 {
   font-size: 20px;
 }
+
 .fw-normal {
   font-weight: normal;
 }
+
 .fw-medium {
   font-weight: 500;
 }
+
 .fw-bold {
   font-weight: 700;
 }
+
 .bg-center-cover-norepeat {
   background-position: center;
   background-size: cover;
@@ -120,9 +151,12 @@
 }
 
 .card {
-  background-color: white;
-  border-radius: 12px;
-  padding: 40px 28px;
+  background-color: var(--primary-light-2);
+  border-radius: 8px;
+  padding: clamp(20px, 4vw, 30px) clamp(15px, 4vw, 25px);
+  border: 1px solid #BECEE7;
+  height: 100%;
+
   &.shadow {
     box-shadow: 0px 4px 60px rgba(0, 0, 0, .08);
   }
@@ -134,39 +168,47 @@
   }
 
 }
+
 .main-title {
-    position: relative;
-    z-index: 1;
-    text-transform: capitalize;
+  position: relative;
+  z-index: 1;
+  text-transform: capitalize;
 }
+
 .line-bg {
   background-image: url('./assets/img/sec-line-bg.webp');
   background-repeat: repeat;
   background-position: top center;
 }
+
 .input-wrapper {
   position: relative;
   margin-bottom: 12px;
+
   &.dark {
     .form-label {
       background-color: var(--navy-blue);
       color: white;
     }
+
     .form-control {
       color: white;
     }
   }
+
   &.gray-light {
     .form-control {
       border-color: var(--gray-light);
       background-color: var(--gray-light);
     }
   }
+
   &:hover {
     .form-label {
       color: var(--primary);
     }
   }
+
   .form-label {
     position: absolute;
     left: 17px;
@@ -175,19 +217,27 @@
     padding: 0 8px;
     transition: .3s;
   }
+
   .form-control {
-    border: 1px solid #676767;
+    border: 1px solid #C4C4C4;
     border-radius: 8px;
     width: 100%;
     outline: none;
     background-color: transparent;
     padding: 12px 17px;
-    margin-top: 5px;
+    margin-top: 8px;
     transition: .3s;
+
     &:focus,
     &:hover {
       border-color: var(--primary);
     }
+  }
+
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
   }
 }
 
@@ -195,6 +245,7 @@
 .underline {
   position: relative;
   display: inline-block;
+
   &::before {
     content: "";
     width: 100%;
@@ -206,6 +257,7 @@
     z-index: -1;
   }
 }
+
 // read more Toggle button
 
 ::-webkit-scrollbar {
@@ -227,16 +279,20 @@
 
 .list-style-disc {
   padding-left: 30px;
+
   li {
     list-style: disc;
   }
 }
+
 .list-with-icon {
   gap: 10px;
+
   .list-item {
     display: flex;
     align-items: center;
     gap: 20px;
+
     .icon-wrapper {
       padding: 14px;
       border-radius: 8px;
@@ -244,12 +300,15 @@
     }
   }
 }
+
 .position-relative {
   position: relative;
 }
+
 .z-1 {
   z-index: 1;
 }
+
 .overflow-hidden {
   overflow: hidden;
 }
@@ -261,6 +320,7 @@
   transform: translate(0, -50%);
   margin: 0;
 }
+
 .wpcf7 .wpcf7-not-valid-tip {
   margin-top: 6px;
   font-size: 14px !important;
@@ -268,32 +328,39 @@
   line-height: 20px;
   text-align: start !important;
 }
+
 .wpcf7 .wpcf7-response-output {
   padding: 8px 10px !important;
   border-radius: 10px;
   margin-bottom: 0 !important;
-  margin-top:18px !important;
+  margin-top: 18px !important;
 }
+
 .wpcf7 form.invalid .wpcf7-response-output {
   background-color: #fff9eb;
   color: #ffb900;
 }
+
 .wpcf7 form.sent .wpcf7-response-output {
   background-color: #eefdef;
   color: #46b450;
 }
+
 .wpcf7 form.failed .wpcf7-response-output {
   color: #dc3232;
   background-color: #ffe6e6;
 }
+
 @media (min-width: 991px) {
   .d-lg-block {
     display: block !important;
   }
+
   .flex-lg-row {
     flex-direction: row;
   }
 }
+
 @media (max-width: 767px) {
   .underline {
     &::before {
@@ -302,6 +369,7 @@
     }
   }
 }
+
 @media (max-width: 576px) {
   .sec-badge {
     padding: 10px 14px;
