--- a/assets/guide-sec.css
+++ b/assets/guide-sec.css
@@ -1,28 +1,1 @@
-.guide-sec .card {
-  padding: 6px;
-  background-color: transparent;
-}
-.guide-sec .card .content-wrapper {
-  padding: 8px;
-  position: relative;
-}
-.guide-sec .card .content-wrapper .date-wrapper {
-  background-color: var(--primary);
-  color: white;
-  border-radius: 6px;
-  padding: 6px 16px;
-  text-align: center;
-  position: absolute;
-  right: 16px;
-  top: -30px;
-}
-.guide-sec .card .content-wrapper .btn-arrow {
-  color: var(--primary);
-  font-family: "Neueplak-Semibold", sans-serif;
-  border-bottom: 1px solid var(--primary);
-  width: -moz-fit-content;
-  width: fit-content;
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}/*# sourceMappingURL=guide-sec.css.map */
+/*# sourceMappingURL=guide-sec.css.map */
