--- a/assets/businnes-sec.css
+++ b/assets/businnes-sec.css
@@ -1,6 +1,7 @@
 .business-sec .card {
   cursor: pointer;
   transition: all 0.3s ease-in-out;
+  background-color: var(--primary-light);
 }
 .business-sec .card:hover {
   background-color: var(--primary);
