--- a/assets/businnes-sec.scss
+++ b/assets/businnes-sec.scss
@@ -2,6 +2,7 @@
     .card {
         cursor: pointer;
         transition: all .3s ease-in-out;
+        background-color: var(--primary-light);
 
         &:hover {
             background-color: var(--primary);
