--- a/assets/theme_styles.scss
+++ b/assets/theme_styles.scss
@@ -151,7 +151,6 @@
 }
 
 .card {
-  background-color: var(--primary-light-2);
   border-radius: 8px;
   padding: clamp(20px, 4vw, 30px) clamp(15px, 4vw, 25px);
   border: 1px solid #BECEE7;
@@ -162,12 +161,64 @@
   }
 }
 
+.card-1 {
+  overflow: hidden;
+  border-radius: 8px;
+  border: 1px solid var(--gray-light);
+
+  .content-wrapper {
+    padding: 18px;
+
+    .card-heading {
+      font-size: clamp(16px, 1vw, 20px);
+      font-family: "Neueplak-Text-Bold", sans-serif;
+    }
+  }
+}
+
+.card-2{
+  border: 1px solid #BECEE7;
+  border-radius: 8px;
+  padding: 8px;
+
+  .content-wrapper{
+    padding: 8px;
+    position: relative;
+    .date-wrapper {
+        background-color: var(--primary);
+        color: white;
+        border-radius: 6px;
+        padding: 6px 16px;
+        text-align: center;
+        position: absolute;
+        right: 16px;
+        top: -30px;
+    }
+}
+}
+
 .default-sec {
   .main-title {
     margin-bottom: clamp(22px, 6vw, 46px);
   }
 
 }
+
+.half-sec {
+  &.content-right {
+    .content-wrapper {
+      padding-left: 48px;
+    }
+  }
+
+  &.content-left {
+    .content-wrapper {
+      padding-right: 48px;
+    }
+
+  }
+}
+
 
 .main-title {
   position: relative;
@@ -358,6 +409,30 @@
 
   .flex-lg-row {
     flex-direction: row;
+  }
+}
+
+@media (max-width:991px) {
+  .order-lg-1 {
+    order: 1;
+  }
+
+  .order-lg-2 {
+    order: 2;
+  }
+
+  .half-sec {
+    &.content-right {
+      .content-wrapper {
+        padding-left: 0;
+      }
+    }
+
+    &.content-left {
+      .content-wrapper {
+        padding-right: 0;
+      }
+    }
   }
 }
 
