--- a/assets/hero-sec.css
+++ b/assets/hero-sec.css
@@ -1,1 +1,11 @@
-/*# sourceMappingURL=hero-sec.css.map */
+.hero-sec .single-slider .slider-item {
+  background-position: center;
+  background-size: cover;
+}
+.hero-sec .single-slider .slider-item .content-wrapper {
+  max-width: 540px;
+  padding: clamp(40px, 7vw, 90px) 0;
+}
+.hero-sec .single-slider .slider-item .content-wrapper .main-title {
+  font-size: clamp(28px, 5vw, 48px);
+}/*# sourceMappingURL=hero-sec.css.map */
