--- a/assets/theme_styles.css
+++ b/assets/theme_styles.css
@@ -1801,6 +1801,10 @@ Needed for proper display in IE 10-.
   font-weight: 700;
 }
 
+.text-primary {
+  color: var(--primary);
+}
+
 .bg-center-cover-norepeat {
   background-position: center;
   background-size: cover;
@@ -1957,18 +1961,18 @@ Needed for proper display in IE 10-.
   list-style: disc;
 }
 
-.list-with-icon {
-  gap: 10px;
-}
 .list-with-icon .list-item {
-  display: flex;
-  align-items: center;
-  gap: 20px;
+  position: relative;
+  padding-left: 26px;
 }
-.list-with-icon .list-item .icon-wrapper {
-  padding: 14px;
-  border-radius: 8px;
-  background-color: var(--primary-light);
+.list-with-icon .list-item::before {
+  content: "";
+  position: absolute;
+  width: 18px;
+  height: 16px;
+  left: 0;
+  top: 4px;
+  background-image: url("./list-icon.svg");
 }
 
 .position-relative {
