product-page-update

--- a/assets/_buttons.scss
+++ b/assets/_buttons.scss
@@ -30,6 +30,11 @@
   }
 }
 
+.btn-outline {
+  border: 2px solid black;
+  color: black;
+}
+
 .btn-primary {
   color: white;
   background-color: var(--primary);
