--- a/assets/slide-icon.css
+++ b/assets/slide-icon.css
@@ -1,5 +1,5 @@
 .slide-icon {
-  background-color: var(--gray-light);
+  background-color: var(--primary-light);
   padding: 20px 0;
 }
 .slide-icon .main-slider {
