--- a/assets/slide-icon.scss
+++ b/assets/slide-icon.scss
@@ -1,5 +1,5 @@
 .slide-icon {
-    background-color: var(--gray-light);
+    background-color: var(--primary-light);
     padding: 20px 0;
     .main-slider {
         overflow: hidden;
