--- a/assets/theme_styles.scss
+++ b/assets/theme_styles.scss
@@ -47,6 +47,10 @@
   text-align: start;
 }
 
+.text-white {
+  color: white;
+}
+
 .h-100 {
   height: 100%;
 }
@@ -131,7 +135,9 @@
 .fs-20 {
   font-size: 20px;
 }
-
+.fs-22 {
+  font-size: 22px;
+}
 .fw-normal {
   font-weight: normal;
 }
