--- a/assets/_reboot.scss
+++ b/assets/_reboot.scss
@@ -92,7 +92,7 @@ p,
 ul.list-style-disc li,
 ol.list-style-decimal li,
 .list-style-check li {
-  color: var(--gray-2);
+  color: black;
   margin-top: 0;
   margin-bottom: 1rem;
   font-weight: 400;
