--- a/assets/circle-sec.css
+++ b/assets/circle-sec.css
@@ -19,6 +19,12 @@
 }
 .circle-sec span {
   font-size: 24px;
+  color: black;
+}
+.circle-sec .content-wrapper .circle-image {
+  border-radius: 50%;
+  border: 5px solid white;
+  box-shadow: 0px 0px 34px 0px rgba(0, 0, 0, 0.1019607843);
 }
 
 @media (max-width: 576px) {
