--- a/assets/circle-sec.scss
+++ b/assets/circle-sec.scss
@@ -21,6 +21,14 @@
     }
     span {
         font-size: 24px;
+        color: black;
+    }
+    .content-wrapper {
+        .circle-image{
+            border-radius: 50%;
+            border: 5px solid white;
+            box-shadow: 0px 0px 34px 0px #0000001A;
+        }
     }
 
 }
