--- a/assets/contact-form.scss
+++ b/assets/contact-form.scss
@@ -1,4 +1,5 @@
-.contact-sec {
+.contact-sec,
+.contact-sec-1 {
     .contact-form {
         border-radius: 8px;
         border: 1px solid #CCCCCC;
@@ -10,6 +11,9 @@
             justify-content: space-between;
             gap: 16px;
         }
+    }
+    .contact-form-1 {
+        padding: 12px;
     }
 }
 
