--- a/assets/theme_styles.scss
+++ b/assets/theme_styles.scss
@@ -77,7 +77,7 @@
 }
 
 .mb-0 {
-  margin-bottom: 0;
+  margin-bottom: 0 !important;
 }
 
 .mb-1 {
@@ -213,6 +213,26 @@
 }
 }
 
+.card-3{
+  border: 1px solid #BECEE7;
+  border-radius: 8px;
+  padding: 8px;
+
+  .content-wrapper{
+    padding: 8px;
+    position: relative;
+    .date-wrapper {
+        background-color: var(--primary);
+        color: white;
+        border-radius: 6px;
+        padding: 6px 16px;
+        text-align: center;
+        position: absolute;
+        right: 16px;
+        top: -30px;
+    }
+}
+}
 .default-sec {
   .main-title {
     margin-bottom: clamp(22px, 6vw, 46px);
@@ -460,6 +480,9 @@
       height: 4px;
       bottom: 4px;
     }
+  }
+  .card-2{
+    flex-wrap: wrap;
   }
 }
 
