--- a/assets/hero-sec.scss
+++ b/assets/hero-sec.scss
@@ -3,6 +3,7 @@
         .slider-item {
             background-position: center;
             background-size: cover;
+            background-repeat: no-repeat;
 
             .main-content {
                 position: relative;
