--- a/assets/networking-sec.scss
+++ b/assets/networking-sec.scss
@@ -90,6 +90,9 @@
             margin: 0;
             .slick-items {
                 margin: 0 10px;
+                .card{
+                    text-align: left;
+                }
             }
         }
     }
