--- a/assets/demand-sec.scss
+++ b/assets/demand-sec.scss
@@ -4,12 +4,12 @@
         .content-wrapper{
             position: absolute;
             bottom: 32px;
-            left: 32px;
-            right: 32px;
+            left: 0;
+            right: 0;
         }
     }
     .right-content-wrapper {
-        padding: 32px;
+        padding-top: 32px;
         background-color: var(--primary-light);
         height: 100%;
         position: relative;
@@ -49,7 +49,7 @@
                 gap: 16px;
                 text-align: center;
                 align-items: center;
-                .content{
+                .content-wrapper{
                     max-width: 580px;
                     margin: 0 auto;
                     .btn{
