--- a/assets/storage-sec.css
+++ b/assets/storage-sec.css
@@ -19,6 +19,7 @@
 }
 .storage-sec .content-wrapper {
   position: relative;
+  transform: translate(-80px, 30px);
 }
 .storage-sec .content-wrapper::after {
   content: "";
@@ -41,16 +42,19 @@
   transform: translate(-30px, 30px);
 }
 
-@media (max-width: 992px) {
+@media (max-width: 1180px) {
   .storage-sec .image-wrapper::before {
     display: none;
   }
   .storage-sec .image-wrapper img {
     transform: translateX(0);
   }
+  .storage-sec .content-wrapper {
+    transform: translate(0);
+  }
   .storage-sec .content-wrapper .card {
     transform: translate(0, 0);
     padding: clamp(35px, 5vw, 45px) clamp(25px, 5vw, 35px);
-    box-shadow: 0px 0px 18px rgba(0, 0, 0, 0.0784313725);
+    box-shadow: 2px 2px 16px rgba(0, 0, 0, 0.0431372549), -2px -2px 16px rgba(0, 0, 0, 0.0431372549);
   }
 }/*# sourceMappingURL=storage-sec.css.map */
