--- a/assets/storage-sec.css
+++ b/assets/storage-sec.css
@@ -1,60 +1,1 @@
-.storage-sec .image-wrapper {
-  position: relative;
-}
-.storage-sec .image-wrapper::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  background-color: var(--gray-light);
-  border-radius: 8px;
-  height: 240px;
-  width: 200px;
-  z-index: -1;
-}
-.storage-sec .image-wrapper img {
-  border-radius: 18px;
-  transform: translateX(30px);
-}
-.storage-sec .content-wrapper {
-  position: relative;
-  transform: translate(-80px, 30px);
-}
-.storage-sec .content-wrapper::after {
-  content: "";
-  position: absolute;
-  right: 0;
-  top: 0;
-  background-color: var(--primary-light-2);
-  border-radius: 18px;
-  width: 200px;
-  height: 200px;
-  z-index: -1;
-}
-.storage-sec .content-wrapper .card {
-  box-shadow: 5px 5px 18px rgba(0, 0, 0, 0.0784313725);
-  border: transparent;
-  border-radius: 18px;
-  padding: 56px;
-  height: 100%;
-  background-color: white;
-  transform: translate(-30px, 30px);
-}
-
-@media (max-width: 1180px) {
-  .storage-sec .image-wrapper::before {
-    display: none;
-  }
-  .storage-sec .image-wrapper img {
-    transform: translateX(0);
-  }
-  .storage-sec .content-wrapper {
-    transform: translate(0);
-  }
-  .storage-sec .content-wrapper .card {
-    transform: translate(0, 0);
-    padding: clamp(35px, 5vw, 45px) clamp(25px, 5vw, 35px);
-    box-shadow: 2px 2px 16px rgba(0, 0, 0, 0.0431372549), -2px -2px 16px rgba(0, 0, 0, 0.0431372549);
-  }
-}/*# sourceMappingURL=storage-sec.css.map */
+/*# sourceMappingURL=storage-sec.css.map */
