--- a/assets/product-sec.scss
+++ b/assets/product-sec.scss
@@ -5,7 +5,8 @@
         justify-content: space-between;
         gap: 20px;
         flex-wrap: wrap;
-        .filter-btn{
+
+        .filter-btn {
             background-color: var(--gray-light);
             border-radius: 6px;
             padding: 4px 12px;
@@ -16,12 +17,54 @@
             width: fit-content;
             color: black;
         }
-        .select{
+
+        .select {
             border-radius: 6px;
             padding: 6px 6px;
             outline: none;
             border: 1px solid gray;
         }
     }
-}
 
+    .pagination {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        gap: clamp(10px, 2vw, 20px);
+
+        li {
+            a {
+                border: 1px solid #323232;
+                width: 58px;
+                height: 58px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border-radius: 8px;
+                color: #323232;
+                font-size: 20px;
+                transition: all .2s ease-in-out;
+                &.active{
+                    background-color: var(--primary);
+                    color: white;
+                }
+                .pagination-arrow {
+                    transition: all .2s ease-in-out;
+                }
+                &:hover {
+                    background-color: var(--primary);
+                    border-color: var(--primary);
+                    color: white;
+                    .pagination-arrow {
+                        filter: invert(1) brightness(2);
+                    }
+                }
+            }
+        }
+        li:last-child {
+            transform: rotate(180deg);
+        }
+        
+    }
+}
