--- a/assets/faq.scss
+++ b/assets/faq.scss
@@ -1,4 +1,28 @@
 .faq-sec {
+    .image-wrapper {
+        .big-img {
+            display: none;
+            opacity: 0;
+            transition: opacity 0.3s ease;
+
+            &.active {
+                display: block;
+                opacity: 1;
+            }
+        }
+
+
+        .small-img {
+            cursor: pointer;
+            opacity: 0.6;
+            transition: opacity 0.3s ease;
+
+            &.active {
+                opacity: 1;
+                border: 2px solid #007bff;
+            }
+        }
+    }
     .accordion {
         .accordion-item {
             margin-bottom: clamp(12px, 4vw, 20px);
@@ -91,13 +115,13 @@
             }
         }
     }
-
     .accordion-s1 {
         .accordion-item {
             border: none;
             border-bottom: 1px solid #C2CCDC;
             border-radius: 0px;
             margin-bottom: 0px;
+
             .accordion-header {
                 display: flex;
                 gap: 16px;
@@ -114,7 +138,8 @@
                     transition: all .2s ease-in-out;
                 }
             }
-            .accordion-content{
+
+            .accordion-content {
                 padding: 16px;
             }
         }
@@ -122,13 +147,16 @@
         .accordion-item {
             &.active {
                 margin-bottom: 0;
+
                 .accordion-header {
                     background-color: transparent;
+
                     .arrow {
                         transform: rotate(270deg);
                     }
                 }
-                .accordion-content{
+
+                .accordion-content {
                     background-color: transparent;
                 }
             }
@@ -169,9 +197,10 @@
                 }
             }
         }
-        .accordion-s1{
-            .accordion-item{
-                .accordion-header{
+
+        .accordion-s1 {
+            .accordion-item {
+                .accordion-header {
                     padding: 16px;
                 }
             }
